Grace/tests/gibbs/errors/t173.grace
// ERROR = L0011
print "Hello world
print "Hi again"
